@@ -17,7 +17,9 @@ re_expression = <%= @re_expression %>
 <% if @full_name_format -%>
 full_name_format = <%= @full_name_format %>
 <% end -%>
+<% unless @try_inotify.nil? -%>
 try_inotify = <%= @try_inotify.to_s %>
+<% end -%>
 <% if @krb5_rcache_dir -%>
 krb5_rcache_dir = <%= @krb5_rcache_dir %>
 <% end -%>
