@@ -1,3 +1,6 @@
+* Mon Sep 11 2017 Judy Johnson <judy.johnson@onyxpoint.com> - 6.0.3-0
+- Only enable 'try_inotify' if explicitly set
+
 * Wed Aug 30 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.3-0
 - Sssd::DebugLevel now handles all variants specfied in sssd.conf man page
 - All instances of debug_level are now typed as Sssd::DebugLevel
